feat(): implemented CRUD of categories and organizing project

--- a/boardcamp-back/package.json
+++ b/boardcamp-back/package.json
@@ -9,8 +9,10 @@
   "author": "Vinícius de Freitas Roque",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "joi": "^17.6.2",
     "pg": "^8.8.0"
   }
 }
